--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -16,16 +16,16 @@ jobs:
     - name: Setup Python
       uses: actions/setup-python@v2
       with:
-        python-version: '3.x' # Укажите версию Python, которая поддерживается Nuitka
+        python-version: '3.10.3'
         
     - name: Install Nuitka
       run: python -m pip install nuitka
       
     - name: Build EXE
-      run: nuitka --standalone --output-dir=dist my_script.py # Замените my_script.py на ваш скрипт
+      run: nuitka --standalone --output-dir=dist main.py
     
     - name: Upload EXE artifact
       uses: actions/upload-artifact@v2
       with:
-        name: my_script_exe
-        path: dist/my_script.exe # Замените my_script.exe на имя вашего .exe файла
+        name: main_exe
+        path: dist/main.exe
