--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -16,7 +16,7 @@ jobs:
     - name: Setup Python
       uses: actions/setup-python@v2
       with:
-        python-version: '3.10.3'
+        python-version: '3.x'
         
     - name: Install Nuitka
       run: python -m pip install nuitka
