--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -25,8 +25,8 @@ jobs:
       run: echo "/home/runner/.local/bin" >> $GITHUB_PATH
     
     - name: Run Nuitka
-      run: python -m nuitka --standalone --output-dir=dist main.py
-    
+      run: python -m nuitka --standalone --output-dir=dist $GITHUB_WORKSPACE/src/main.py
+
     - name: Upload EXE artifact
       uses: actions/upload-artifact@v2
       with:
