--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -26,7 +26,9 @@ jobs:
     
     - name: Run Nuitka
       run: python -m nuitka --standalone --output-dir=dist $GITHUB_WORKSPACE/src/main.py
-
+      env:
+        PYTHON_VERSION: 3.11
+        
     - name: Upload EXE artifact
       uses: actions/upload-artifact@v2
       with:
