--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -30,5 +30,5 @@ jobs:
     - name: Upload EXE artifact
       uses: actions/upload-artifact@v2
       with:
-        name: main.exe
-        path: src/
+        name: main
+        path: dist/
