--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -26,13 +26,16 @@ jobs:
     
     - name: Run Nuitka
       run: python -m nuitka --standalone --output-dir=dist $GITHUB_WORKSPACE/src/main.py
-
-    - name: Create tag
-      run: git tag -a v1.0 -m "Version 1.0"
-      if: github.ref == 'refs/heads/main'
       
+    - name: Set up Git
+      run: |
+        git config --global user.name "mykhailoko"
+        
+    - name: Create tag
+      run: git tag -a v1.0.0 -m "Version 1.0.0"
+
     - name: Upload EXE artifact
       uses: softprops/action-gh-release@v1
       with:
         files: «dist/main.exe»
- 
+        token: ${{ secrets.GITHUB_TOKEN }}
