--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -30,5 +30,5 @@ jobs:
     - name: Upload EXE artifact
       uses: softprops/action-gh-release@v1
       with:
-        files: «dist/main.exe»
+        files: «src/main.py»
         tag_name: v1.0.1
