--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,4 +1,4 @@
-name: Build EXE
+name: Compile and Release Python to Exe
 
 on:
   push:
@@ -8,27 +8,40 @@ on:
 jobs:
   build:
     runs-on: ubuntu-latest
-    
+
     steps:
-    - name: Checkout code
+    - name: Checkout Repository
       uses: actions/checkout@v2
-      
-    - name: Setup Python
+
+    - name: Install Python
       uses: actions/setup-python@v2
       with:
-        python-version: '3.11'
-        
-    - name: Install Nuitka
-      run: python -m pip install nuitka
-      
-    - name: Set Nuitka path
-      run: echo "/home/runner/.local/bin" >> $GITHUB_PATH
-    
-    - name: Run Nuitka
-      run: python -m nuitka --standalone --output-dir=dist $GITHUB_WORKSPACE/src/main.py
+        python-version: '3.x'
 
-    - name: Upload EXE artifact
-      uses: softprops/action-gh-release@v1
+    - name: Install Nuitka
+      run: pip install nuitka
+
+    - name: Compile Python to Exe
+      run: nuitka --mingw --output-dir=./src/main.py 
+
+    - name: Create Release
+      id: create_release
+      uses: actions/create-release@v1
+      env:
+        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
       with:
-        files: «src/main.py»
-        tag_name: v1.0.1
+        tag_name: v1.0.1 
+        release_name: Release v1.0.1
+        draft: false
+        prerelease: false
+
+    - name: Upload Exe to Release
+      id: upload-release-asset
+      uses: actions/upload-release-asset@v1
+      env:
+        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+      with:
+        upload_url: ${{ steps.create_release.outputs.upload_url }}
+        asset_path: ./dist/main.exe
+        asset_name: main.exe
+        asset_content_type: application/octet-stream
