--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -19,10 +19,11 @@ jobs:
         python-version: '3.x'
 
     - name: Install Nuitka
-      run: pip install nuitka
+      run: |
+        python -m pip install nuitka
 
     - name: Compile Python to Exe
-      run: nuitka --mingw --output-dir=./src/main.py 
+      run: nuitka --mingw --output-dir=./src/main.py
 
     - name: Create Release
       id: create_release
@@ -30,7 +31,7 @@ jobs:
       env:
         GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
       with:
-        tag_name: v1.0.1 
+        tag_name: v1.0.1
         release_name: Release v1.0.1
         draft: false
         prerelease: false
