--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -28,7 +28,8 @@ jobs:
       run: python -m nuitka --standalone --output-dir=dist $GITHUB_WORKSPACE/src/main.py
 
     - name: Upload EXE artifact
-      uses: softprops/action-gh-release@v2
+      uses: actions/upload-artifact@v2
       if: startsWith(github.ref, 'refs/tags/')
       with:
-        files: 'dist/main.dist/main.bin'
+        name: main.exe
+        path: dist/main.dist/main.exe
