--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -4,6 +4,8 @@ on:
   push:
     branches:
       - main
+    tags:
+      - 'v*.*.*'
 
 jobs:
   build:
@@ -29,7 +31,7 @@ jobs:
 
     - name: Upload EXE artifact
       uses: actions/upload-artifact@v2
-      if: startsWith(github.ref, 'refs/tags/')
+      if: ${{ github.ref == 'refs/tags/v1.0.0' }}
       with:
         name: main.exe
         path: dist/main.dist/main.exe
