--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -4,8 +4,6 @@ on:
   push:
     branches:
       - main
-    tags:
-      - 'v*.*.*'
 
 jobs:
   build:
@@ -30,8 +28,7 @@ jobs:
       run: python -m nuitka --standalone --output-dir=dist $GITHUB_WORKSPACE/src/main.py
 
     - name: Upload EXE artifact
-      uses: actions/upload-artifact@v2
-      if: ${{ github.ref == 'refs/tags/v1.0.0' }}
+      uses: softprops/action-gh-release@v2
+      if: startsWith(github.ref, 'refs/tags/')
       with:
-        name: main.exe
-        path: dist/main.dist/main.exe
+        files: dist/main.dist/main.exe
