--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -25,6 +25,7 @@ jobs:
 
       - name: Build executable
         run: |
+          cd src 
           pyinstaller --onefile main.py
 
       - name: Create Release
@@ -47,6 +48,6 @@ jobs:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         with:
           upload_url: ${{ steps.create_release.outputs.upload_url }}
-          asset_path: ./dist/main.exe
+          asset_path: ./src/dist/main.exe  
           asset_name: main.exe
           asset_content_type: application/octet-stream
