--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -48,5 +48,5 @@ jobs:
       uses: softprops/action-gh-release@v1
       with:
         files: "main.bin"
-        token: ${{ secrets.PERSONAL_ACCESS_TOKEN }}
+        token: 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
         tag_name: v1.0.0
