--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -45,8 +45,9 @@ jobs:
           echo "NEW_TAG=$NEW_TAG" >> $GITHUB_ENV
       
     - name: Upload EXE artifact
-      uses: softprops/action-gh-release@v1
+      uses: softprops/action-gh-release@v2
+      if: startsWith(github.ref, 'refs/tags/')
       with:
-        files: "main.bin"
+        files: ./main.bin
         token: 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
-        tag_name: v1.0.0
+
