--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,4 +1,4 @@
-name: Build EXE
+name: Build and Release APK
 
 on:
   push:
@@ -13,41 +13,24 @@ jobs:
     runs-on: ubuntu-latest
     
     steps:
-    - name: Checkout code
-      uses: actions/checkout@v2
+      - name: Checkout code
+        uses: actions/checkout@v2
       
-    - name: Setup Python
-      uses: actions/setup-python@v2
-      with:
-        python-version: '3.11'
+      - name: Setup Docker
+        uses: actions/setup-docker@v2
         
-    - name: Install Nuitka
-      run: python -m pip install nuitka
+      - name: Pull Docker Image
+        run: docker pull jedie/buildozer
+        
+      - name: Compile APK
+        run: |
+          docker run -t -v ${PWD}/src:/buildozer/ jedie/buildozer buildozer --verbose android release
+          systemctl start docker
       
-    - name: Set Nuitka path
-      run: echo "/home/runner/.local/bin" >> $GITHUB_PATH
-    
-    - name: Run Nuitka
-      run: touch main.bin
-
-    - name: Check
-      run: ls 
-
-    - name: Generate Git Tag
-      id: generate_tag
-      run: |
-          VERSION_PREFIX="v"
-          VERSION_MAJOR_MINOR="1.0"
-          VERSION_PATCH="0"
-           
-          NEW_TAG="${VERSION_PREFIX}${VERSION_MAJOR_MINOR}.${VERSION_PATCH}"
-          echo "Generated new tag: $NEW_TAG"
-          echo "NEW_TAG=$NEW_TAG" >> $GITHUB_ENV
-      
-    - name: Upload EXE artifact
-      uses: softprops/action-gh-release@v2
-      if: startsWith(github.ref, 'refs/tags/')
-      with:
-        files: ./main.bin
-        token: 
-
+      - name: Upload APK to Releases
+        uses: actions/upload-release-asset@v1
+        with:
+          upload_url: https://uploads.github.com/repos/${{ env.REPO_NAME }}/releases/${{ github.event.release.id }}/assets
+          asset_path: ./bin/*.apk
+          asset_name: dino.apk
+          token: ${{ secrets.GITHUB_TOKEN }}
