--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,4 +1,4 @@
-name: Build and Release APK
+name: Сборка и загрузка APK в релизы
 
 on:
   push:
@@ -13,21 +13,21 @@ jobs:
     runs-on: ubuntu-latest
     
     steps:
-      - name: Checkout code
+      - name: Получение кода
         uses: actions/checkout@v2
       
-      - name: Setup Docker
-        uses: actions/setup-docker@v2
+      - name: Установка Docker
+        uses: docker/setup-buildx-action@v1
         
-      - name: Pull Docker Image
+      - name: Загрузка образа Docker
         run: docker pull jedie/buildozer
         
-      - name: Compile APK
+      - name: Компиляция APK
         run: |
           docker run -t -v ${PWD}/src:/buildozer/ jedie/buildozer buildozer --verbose android release
           systemctl start docker
       
-      - name: Upload APK to Releases
+      - name: Загрузка APK в релизы
         uses: actions/upload-release-asset@v1
         with:
           upload_url: https://uploads.github.com/repos/${{ env.REPO_NAME }}/releases/${{ github.event.release.id }}/assets
