--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -27,12 +27,15 @@ jobs:
       
       - name: Создание buildozer.spec
         run: |
-          echo "[app]\ntitle = DinoAdventure\npackage.name = dino\npackage.domain = org.example\nsource.dir = .\nsource.include_exts = py,png,jpg,kv,atlas\nsource.exclude_dirs = tests, bin\nversion = 0.1\nrequirements = kivy\nicon.filename = %(source.dir)s/icon.png\norientation = portrait" > ${{ github.workspace }}/temp/buildozer.spec
+          echo "[app]\ntitle = Ваше название приложения\npackage.name = ваше_название_приложения\npackage.domain = org.example\nsource.dir = .\nsource.include_exts = py,png,jpg,kv,atlas\nsource.exclude_dirs = tests, bin\nversion = 0.1\nrequirements = kivy\nicon.filename = %(source.dir)s/icon.png\norientation = portrait" > ${{ github.workspace }}/temp/buildozer.spec
       
       - name: Компиляция APK
         run: |
           docker run -t -v ${PWD}/src:/buildozer/ -v ${{ github.workspace }}/temp:/buildozer/.buildozer jedie/buildozer buildozer --verbose android release
           systemctl start docker
+      
+      - name: Перемещение APK в папку bin
+        run: mv ${{ github.workspace }}/temp/bin/*.apk ${{ github.workspace }}/bin/
       
       - name: Загрузка APK в релизы
         uses: actions/upload-release-asset@v1
