--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -32,7 +32,7 @@ jobs:
       
       - name: Компиляция APK
         run: |
-          docker run -t -v ${PWD}/src:/buildozer/ -v ${{ github.workspace }}/temp:/buildozer/.buildozer -w /buildozer jedie/buildozer buildozer --verbose android release
+          docker run -t -v ${PWD}/src:/buildozer/ -v ${{ github.workspace }}/temp:/buildozer/.buildozer -w /buildozer jedie/buildozer buildozer --verbose android release --spec ${{ github.workspace }}/temp/buildozer.spec
           systemctl start docker
       
       - name: Перемещение APK в папку bin
