--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,4 +1,4 @@
-name: Сборка и загрузка APK в релизы
+name: Build and Upload APK to Releases
 
 on:
   push:
@@ -13,32 +13,32 @@ jobs:
     runs-on: ubuntu-latest
     
     steps:
-      - name: Получение кода
+      - name: Checkout code
         uses: actions/checkout@v2
       
-      - name: Установка Docker
+      - name: Setup Docker
         uses: docker/setup-buildx-action@v1
         
-      - name: Загрузка образа Docker
+      - name: Pull Docker Image
         run: docker pull jedie/buildozer
         
-      - name: Создание директории и файла buildozer.spec
+      - name: Create buildozer.spec directory and file
         run: |
           mkdir -p buildozer
-          echo "[app]\ntitle = Ваше название приложения\npackage.name = ваше_название_приложения\npackage.domain = org.example\nsource.dir = .\nsource.include_exts = py,png,jpg,kv,atlas\nsource.exclude_dirs = tests, bin\nversion = 0.1\nrequirements = kivy\nicon.filename = %(source.dir)s/icon.png\norientation = portrait" > buildozer/buildozer.spec
+          echo "[app]\ntitle = Your app title\npackage.name = your_package_name\npackage.domain = org.example\nsource.dir = .\nsource.include_exts = py,png,jpg,kv,atlas\nsource.exclude_dirs = tests, bin\nversion = 0.1\nrequirements = kivy\nicon.filename = %(source.dir)s/icon.png\norientation = portrait" > buildozer/buildozer.spec
       
-      - name: Показать содержимое директории buildozer
+      - name: Show contents of buildozer directory
         run: ls buildozer
       
-      - name: Компиляция APK
+      - name: Compile APK
         run: |
           docker run -t -v ${PWD}/src:/buildozer/ -v ${PWD}/buildozer:/buildozer/.buildozer -w /buildozer jedie/buildozer buildozer --verbose android release --spec /buildozer/.buildozer/buildozer.spec
           systemctl start docker
       
-      - name: Перемещение APK в папку bin
+      - name: Move APK to bin directory
         run: mv buildozer/bin/*.apk bin/
       
-      - name: Загрузка APK в релизы
+      - name: Upload APK to Releases
         uses: actions/upload-release-asset@v1
         with:
           upload_url: https://uploads.github.com/repos/${{ env.REPO_NAME }}/releases/${{ github.event.release.id }}/assets
