--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -16,8 +16,8 @@ jobs:
       env:
         NODE_ENV: development
       volumes:
-        - my_docker_volume:/volume_mount
+        - Dino-Adventure:/Dino-Adventure
     steps:        
       - name: Check for dockerenv file
-        run: (ls /.dockerenv && echo Found dockerenv) || (echo No dockerenv)
+        run: pwd && ls && ls -la /Dino-Adventure
           
