--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -16,7 +16,7 @@ jobs:
       env:
         NODE_ENV: development
       volumes:
-        - Dino-Adventure:/Dino-Adventure
+        - ./:/Dino-Adventure
     steps:        
       - name: Check for dockerenv file
         run: pwd && ls && ls -la /Dino-Adventure
