--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -18,6 +18,9 @@ jobs:
       volumes:
         - ./:/Dino-Adventure
     steps:        
+      - name: Checkout Сode
+        uses: actions/checkout@v2
+        
       - name: Check for dockerenv file
         run: pwd && ls && ls -la /Dino-Adventure
           
