--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,4 +1,4 @@
-name: Build and Upload APK to Releases
+name: Build EXE
 
 on:
   push:
@@ -9,30 +9,43 @@ env:
   REPO_NAME: mykhailoko/Dino-Adventure
 
 jobs:
-  container-test-job:
+  build:
     runs-on: ubuntu-latest
-    container:
-      image: jedie/buildozer
-      env:
-        NODE_ENV: development
-      volumes:
-        - ./Dino-Adventure:/Dino-Adventure
-    steps:        
-      - name: Checkout Сode
-        uses: actions/checkout@v1
-
-      - name: Create test file
-        run: touch dino.txt
+    
+    steps:
+    - name: Checkout code
+      uses: actions/checkout@v2
+      
+    - name: Setup Python
+      uses: actions/setup-python@v2
+      with:
+        python-version: '3.11'
         
-      - name: Check for dockerenv file
-        run: pwd && ls && ls -la /Dino-Adventure
+    - name: Install Nuitka
+      run: python -m pip install nuitka
+      
+    - name: Set Nuitka path
+      run: echo "/home/runner/.local/bin" >> $GITHUB_PATH
+    
+    - name: Run Nuitka
+      run: run nuitka --standalone src/main.py
 
-      - name: Print version information
-        run: |
-          uname -a
-          cython --version
-          buildozer --version
+    - name: Check
+      run: ls 
 
-      - name: Build Android app
-        run: buildozer --verbose android debug --spec ./buildozer.spec   
-          
+    - name: Generate Git Tag
+      id: generate_tag
+      run: |
+          VERSION_PREFIX="v"
+          VERSION_MAJOR_MINOR="1.0"
+          VERSION_PATCH="0"
+           
+          NEW_TAG="${VERSION_PREFIX}${VERSION_MAJOR_MINOR}.${VERSION_PATCH}"
+          echo "Generated new tag: $NEW_TAG"
+          echo "NEW_TAG=$NEW_TAG" >> $GITHUB_ENV
+      
+    - name: Upload EXE artifact
+      uses: softprops/action-gh-release@v2
+      if: startsWith(github.ref, 'refs/tags/')
+      with:
+        files: ./main.bin
