--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -49,6 +49,22 @@ jobs:
       uses: softprops/action-gh-release@v1
       with:
         files: Dino-Adventure.zip
-        tag_name: ${{ env.NEW_TAG }}
+
+    - name: Set up Docker Buildx
+      uses: docker/setup-buildx-action@v3
+
+    - name: Login to Docker Hub
+      uses: docker/login-action@v3
+      with:
+        username: ${{ secrets.DOCKER_USERNAME }}
+        password: ${{ secrets.DOCKER_PASSWORD }}
+
+    - name: Build Docker image
+      run: |
+        docker buildx build --platform linux/amd64 --output=type=docker -t michaelkk0/dino-adventure:latest .
+        docker images
+
+    - name: Push Docker image
+      run: docker push michaelkk0/dino-adventure:latest   
       env:
         GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
