--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -23,17 +23,14 @@ jobs:
       run: |
         python -m pip install --upgrade pip
         pip install pyinstaller
-
     - name: Build project with PyInstaller
       run: |
         pyinstaller --onefile src/main.py
         ls dist
-
     - name: Package executable
       run: |
         zip -r Dino-Adventure.zip build/*
         tree
-
     - name: Generate Git Tag
       id: generate_tag
       run: |
@@ -44,10 +41,10 @@ jobs:
         NEW_TAG="${VERSION_PREFIX}${VERSION_MAJOR_MINOR}.${VERSION_PATCH}"
         echo "Generated new tag: $NEW_TAG"
         echo "NEW_TAG=$NEW_TAG" >> $GITHUB_ENV
-
     - name: Create GitHub Release
       uses: softprops/action-gh-release@v1
       with:
         files: Dino-Adventure.zip
-
-  
+        tag_name: ${{ env.NEW_TAG }}
+      env:
+        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
