--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -23,14 +23,19 @@ jobs:
       run: |
         python -m pip install --upgrade pip
         pip install pyinstaller
+        
     - name: Build project with PyInstaller
       run: |
         pyinstaller --onefile src/main.py
         ls dist
+
     - name: Package executable
       run: |
+        mkdir -p build
+        mv dist/main.exe build/JumpFight.exe  # Adjust main.exe if necessary
         zip -r Dino-Adventure.zip build/*
         tree
+        
     - name: Generate Git Tag
       id: generate_tag
       run: |
@@ -41,6 +46,7 @@ jobs:
         NEW_TAG="${VERSION_PREFIX}${VERSION_MAJOR_MINOR}.${VERSION_PATCH}"
         echo "Generated new tag: $NEW_TAG"
         echo "NEW_TAG=$NEW_TAG" >> $GITHUB_ENV
+        
     - name: Create GitHub Release
       uses: softprops/action-gh-release@v1
       with:
@@ -49,21 +55,3 @@ jobs:
       env:
         GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
 
-    - name: Set up Docker Buildx
-      uses: docker/setup-buildx-action@v3
-
-    - name: Login to Docker Hub
-      uses: docker/login-action@v3
-      with:
-        username: ${{ secrets.DOCKER_USERNAME }}
-        password: ${{ secrets.DOCKER_PASSWORD }}
-
-    - name: Build Docker image
-      run: |
-        docker buildx build --platform linux/amd64 --output=type=docker -t michaelkk0/dino-adventure:latest .
-        docker images
-
-    - name: Push Docker image
-      run: docker push michaelkk0/dino-adventure:latest   
-      env:
-        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
