--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,4 +1,4 @@
-name: Build Python Project with PyInstaller 
+name: Build Python Project with Nuitka 
 
 on:
   push:
@@ -22,11 +22,11 @@ jobs:
     - name: Install dependencies
       run: |
         python -m pip install --upgrade pip
-        pip install pyinstaller
+        pip install nuitka
         
-    - name: Build project with PyInstaller
+    - name: Build project with Nuitka
       run: |
-        pyinstaller --onefile src/main.py
+        run nuitka --standalone src/main.py
         ls dist
 
     - name: Package executable
