--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -22,11 +22,11 @@ jobs:
     - name: Install dependencies
       run: |
         python -m pip install --upgrade pip
-        pip install nuitka
+        python -m pip install nuitka
         
     - name: Build project with Nuitka
       run: |
-        nuitka --standalone src/main.py
+        python -m nuitka --standalone src/main.py
         ls dist
 
     - name: Package executable
