--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -32,7 +32,7 @@ jobs:
     - name: Package executable
       run: |
         mkdir -p build
-        mv dist/main.exe build/JumpFight.exe  # Adjust main.exe if necessary
+        mv main.dist/main.exe build/JumpFight.exe  # Adjust main.exe if necessary
         zip -r Dino-Adventure.zip build/*
         tree
         
