--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,4 +1,4 @@
-name: Build Python Project with Nuitka 
+name: Build Python Project with PyInstaller
 
 on:
   push:
@@ -22,11 +22,11 @@ jobs:
     - name: Install dependencies
       run: |
         python -m pip install --upgrade pip
-        python -m pip install nuitka
+        pip install pyinstaller
         
-    - name: Build project with Nuitka
+    - name: Build project with PyInstaller
       run: |
-        python -m nuitka --standalone src/main.py
+        pyinstaller --onefile src/main.py
         ls main.dist
 
     - name: Package executable
