--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -26,7 +26,7 @@ jobs:
         
     - name: Build project with Nuitka
       run: |
-        python -m nuitka --onefile src/main.py
+        python -m nuitka --onefile --standalone src/main.py
         ls main.dist
         
     - name: Package executable
