--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -8,10 +8,7 @@ on:
 
 jobs:
   build:
-    runs-on: ${{ matrix.os }}
-    strategy:
-      matrix:
-        os: [ubuntu-latest, windows-latest]
+    runs-on: ubuntu-latest
 
     steps:
     - name: Checkout code
@@ -26,22 +23,20 @@ jobs:
       run: |
         python -m pip install --upgrade pip
         python -m pip install nuitka
-      shell: ${{ matrix.os == 'windows-latest' && 'bash' || 'sh' }}
-
+        python -m pip install pygame
+        
     - name: Build project with Nuitka
       run: |
         python -m nuitka --onefile --standalone src/main.py
         ls main.dist
-      shell: ${{ matrix.os == 'windows-latest' && 'bash' || 'sh' }}
-
+        
     - name: Package executable
       run: |
         mkdir -p build
         mv main.dist/main.bin build/Dino-Adventure.exe 
         zip -r Dino-Adventure.zip build/*
         tree
-      shell: ${{ matrix.os == 'windows-latest' && 'bash' || 'sh' }}
-
+        
     - name: Generate Git Tag
       id: generate_tag
       run: |
@@ -52,7 +47,6 @@ jobs:
         NEW_TAG="${VERSION_PREFIX}${VERSION_MAJOR_MINOR}.${VERSION_PATCH}"
         echo "Generated new tag: $NEW_TAG"
         echo "NEW_TAG=$NEW_TAG" >> $GITHUB_ENV
-      shell: ${{ matrix.os == 'windows-latest' && 'bash' || 'sh' }}
         
     - name: Create GitHub Release
       uses: softprops/action-gh-release@v1
