--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -21,9 +21,9 @@ jobs:
 
     - name: Install dependencies
       run: |
-        python -m pip install --upgrade pip
-        python -m pip install nuitka
-        python -m pip install pygame
+        python3 -m pip install --upgrade pip
+        python3 -m pip install nuitka
+        python3 -m pip install pygame
         
     - name: Build project with Nuitka
       run: |
