--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -44,9 +44,9 @@ jobs:
         VERSION_MAJOR_MINOR="1.0"
         VERSION_PATCH="0"
         
-        NEW_TAG="${VERSION_PREFIX}${VERSION_MAJOR_MINOR}.${VERSION_PATCH}"
-        echo "Generated new tag: $NEW_TAG"
-        echo "NEW_TAG=$NEW_TAG" >> $GITHUB_ENV
+        NEW_TAG=v1.0.0
+        echo "Generated new tag: v1.0.0"
+        echo "NEW_TAG=v1.0.0" >> $GITHUB_ENV
         
     - name: Create GitHub Release
       uses: softprops/action-gh-release@v1
