--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,4 +1,4 @@
-name: Build Python Project with Nuitka
+name: Build Python Project with PyInstaller
 
 on:
   push:
@@ -15,25 +15,24 @@ jobs:
       uses: actions/checkout@v4
 
     - name: Set up Python
-      uses: actions/setup-python@v4
+      uses: actions/setup-python@v2
       with:
         python-version: '3.10'  
     
     - name: Install dependencies
       run: |
         python -m pip install --upgrade pip
-        python -m pip install nuitka
+        python -m pip install pyinstaller
         python -m pip install pygame
         
-    - name: Build project with Nuitka
+    - name: Build project with PyInstaller
       run: |
-        nuitka --onefile --standalone --include-data-dir=src=. src/main.py
-        dir main.dist
+        pyinstaller --onefile src/main.py
         
     - name: Package executable
       run: |
         mkdir build
-        Move-Item main.dist\main.exe build\Dino-Adventure.exe
+        Move-Item dist\main.exe build\Dino-Adventure.exe
         Compress-Archive -Path build\* -DestinationPath Dino-Adventure.zip
         Get-ChildItem
         
