--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,4 +1,4 @@
-name: Build Python Project with PyInstaller
+name: Build Python Project with Nuitka
 
 on:
   push:
@@ -22,12 +22,12 @@ jobs:
     - name: Install dependencies
       run: |
         python -m pip install --upgrade pip
-        python -m pip install pyinstaller
+        python -m pip install nuitka
         python -m pip install pygame
         
-    - name: Build project with PyInstaller
+    - name: Build project with Nuitka
       run: |
-        pyinstaller --onefile src/main.py
+        nuitka --onefile --standalone src/main.py
         
     - name: Package executable
       run: |
