--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,4 +1,4 @@
-name: Build Python Project with Nuitka
+name: Build Python Project with PyInstaller
 
 on:
   push:
@@ -22,15 +22,16 @@ jobs:
     - name: Install dependencies
       run: |
         python -m pip install --upgrade pip
-        python -m pip install nuitka
+        python -m pip install pyinstaller
         python -m pip install pygame
         
-    - name: Build project with Nuitka
+    - name: Build project with PyInstaller
       run: |
-        nuitka --standalone src/main.py
+        pyinstaller --onefile src/main.py
         
     - name: Package executable
       run: |
+        Move-Item dist\main.exe build\Dino-Adventure.exe
         Compress-Archive -Path build\* -DestinationPath Dino-Adventure.zip
         Get-ChildItem
         
